--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forest Throne - Phaser Prototype</title>
+    <title>Bá Chủ Khu Rừng - DigiGO</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
